examples/1.2.0/fail/nonunique-authors/CITATION.cff
cff-version: 1.2.0
authors:
- alias: jspaaks
- alias: jspaaks
message: The message
title: The title
